# Advanced-Python-Learning

./: .gitignore  README.md
NamespacePackages/: README.md
NamespacePackages/project/: pyproject.toml
NamespacePackages/project/package_a/: pyproject.toml
NamespacePackages/project/package_a/noinit/: module_a.py
NamespacePackages/project/src/noinit/: core.py
TypeHints/: callable.py  pyproject.toml  tipos_basicos.py  type_function.py  utils.py
TypeHints/classes/: classes_01.py  classes_02.py  classes_03.py
meu-projeto-mlops/: README.md  pyproject.toml
meu-projeto-mlops/apps/api/: pyproject.toml
meu-projeto-mlops/apps/api/src/api/: main.py
meu-projeto-mlops/apps/api/tests/: test_api.py
meu-projeto-mlops/libs/common/: pyproject.toml
meu-projeto-mlops/libs/common/src/meu/common/: logger.py
uvpypackages/namespaces/titan-workspace/: README.md  pyproject.toml
uvpypackages/namespaces/titan-workspace/stubs/titan/: mod_a.pyi  mod_b.pyi  mod_titan.pyi
