
[project]
name = "api"
version = "0.1.0"
description = "Descrição inicial do projeto"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pedro Tenório", email = "pstsouza13@gmail.com" }]

dependencies = [
    "meu-common"
]

[project.scripts]
api = "api.main:func_main"

[tool.uv.sources]
meu-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyright]
extends = "../../pyproject.toml"