[project]
name = "titan-workspace"
version = "0.0.1"
description = "The author didnt write a description yet"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Pedro Tenório" }]
dependencies = [
  "package_a", "package_b", "titan"
]

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
package_a = { workspace = true }
package_b = { workspace = true }
titan = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["packages"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "packages" }]
reportMissingTypeStubs = true
stubPath = "stubs"

[dependency-groups]
dev = ["mypy>=1.19.0"]